kubernetes/base/services/shoppingList.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: meal-planner
  name: shopping-list-service
  labels:
    app: shopping-list
    version: v1
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: shopping-list
      version: v1
  template:
    metadata:
      labels:
        app: shopping-list
        version: v1
    spec:
      # @todo Add service account
      # @todo Add imagePullPolicy: IfNotPresent and override to Always for development
      containers:
        - name: shopping-list-service
          image: shopping-list-service
          # @todo Add imagePullPolicy: IfNotPresent and override to Never for development
          imagePullPolicy: Never
          resources: {}
          ports:
            - containerPort: 3000
status: {}

---
apiVersion: v1
kind: Service
metadata:
  namespace: meal-planner
  name: shopping-list-service
  labels:
    app: shopping-list
    service: shopping-list
spec:
  selector:
    app: shopping-list
  ports:
    - name: http
      protocol: TCP
      port: 3000

---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  namespace: meal-planner
  name: shopping-list-service-jwt-request-authentication
spec:
  selector:
    matchLabels:
      app: shopping-list
  jwtRules:
    - issuer: "https://${AUTH0_DOMAIN}/"
      jwksUri: "https://${AUTH0_DOMAIN}/.well-known/jwks.json"
